tests/neg/objects/14-object.ts

/*@ foo :: ({x: number}) => void */
export function foo(o) {
    o.y = 10;
}
